--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera Practica Complementaria</title>
+    <link  type="text/css" rel="stylesheet" href="/css/styles.css">
+    <title>Segunda Pre Entrega</title>
 </head>
 <body>
-    <h1>Primera Practica Complementaria</h1>
+    <h1>Segunda Pre Entrega</h1>
     {{{ body }}}
 </body>
 </html>
