--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,8 +1,10 @@
 <div>
-    {{cid}}
+    <span>ID del Carrito :  {{cid}}</span>
 </div>
 <div>
     <ul>
+        <h4>Productos agregados al carrito</h4>
+        </br>
         {{#each products}}
         <li>
             {{this.product}} - {{this.quantity}}
