--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -20,6 +20,7 @@
             <td>{{this.code}}</td>
             <td>{{this.stock}}</td>
             <td>{{this.category}}</td>
+            <td><a href="/products/{{this._id}}">Ver</a></td>
         </tr>
         {{/each}}
     </tbody>
